# fastapi-singleton

./: README.md  pyproject.toml
.github/assets/: three-card-trickster-768.png.credit
.github/workflows/: test.yml
.zed/: settings.json
example/: main.py
src/fastapi_singleton/: __init__.py  _class.py  _function.py  _hooks.py  _lifespan.py  _provider.py  _registry.py  _signature.py  testing.py
tests/: conftest.py  test_class_singleton.py  test_fastapi_integration.py  test_function_singleton.py  test_hooks.py  test_lifespan.py  test_registry.py
