[project]
name = "fastapi-singleton"
version = "0.1.0"
description = "Application-scoped dependencies for FastAPI"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Alex Ward", email = "alxwrd@googlemail.com" }
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: FastAPI",
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
]

[project.urls]
Repository = "https://github.com/alxwrd/fastapi-singleton"
Releases = "https://github.com/alxwrd/fastapi-singleton/releases"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.poe.tasks]
_format = "ruff format"
_sort = "ruff check --select I --fix"
format = ["_format", "_sort"]
lint = "ruff check"
check = "ty check"
test = "pytest"
all = ["format", "lint", "check", "test"]
_check-format = "ruff format --check"
_check-sort = "ruff check --select I"
ci = ["_check-format", "_check-sort", "lint", "check", "test"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
